kustomize/apps/traefik/overlay/prod/patches/n8n-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha
kind: IngressRoute
metadata:
  name: traefik-n8n-ingressroute
spec:
  rules:
    - host: cluster.highglade.local
      http:
        paths:
          - path: /n8n
            pathType: Exact
            backend:
              service:
                name: n8n
                port:
                  number: 5678
